Added Google Analytics tag.

--- a/illustration.html
+++ b/illustration.html
@@ -1,58 +1,80 @@
 <!DOCTYPE html>
 
 <html>
-	<head>
-		<title>Illustration | NMN</title>
-		<meta charset = "UTF=8">
-		<meta name = "viewport" content = "width = device - width, initial-scale = 1">
-		<meta name="robots" content="noindex, noml, nofollow">
-		<meta name="description" content="A lovely little site to show some bits and pieces of myself.">
-		<link rel="icon" type = "image/x-icon" href="./media/illustration/golden panda sign_compressed.webp">
-		<link rel = "stylesheet" href = "./stylesheet/style.css">
-		<link rel = "stylesheet" href = "./stylesheet/css reset.css">
-		<link rel = "stylesheet" href = "./stylesheet/responsiveimagegrid.css">
-	</head>
-	
-	<body>
-		<div class="page-wrapper">
-			<div class = "main-container">
-				<!--Horizontal List Menu-->
-				<div class = "nav-container">
-					<nav>
-						<ul>
-							<li><a href = "./index.html">Home</a></li>
-							<li><a class = "active" href = "./illustration.html">Illustration</a></li>
-							<li><a href = "./animation.html">Animation</a></li>
-						</ul>
-					</nav>
-				</div>
-				
-				<section class = "row">
-					<div class = "column">
-						<img loading="lazy" src = "./media/illustration/lady in green staring at you_compressed.webp" alt = "a lady i have future ideas for">
-						<img loading="lazy" src = "./media/illustration/5.0 shin chan_compressed.webp" alt = "shin chan in an aquarium">
-						<img loading="lazy" src = "./media/illustration/irasuto kon_compressed.webp" alt = "a submission i made for a competition">
-						<img loading="lazy" src="./media/illustration/dean sitting_compressed.webp" alt="dean sitting down, embarrassed about being captured on camera">
-						<img loading="lazy" src="./media/illustration/mwf transparent_compressed.webp" alt="mwf leaning over a railing">
-						<img loading="lazy" src="./media/illustration/d_compressed_1.webp" alt="death in reddish-pink">
-						<img loading="lazy" src = "./media/illustration/classmates_compressed.webp" alt = "sketch based on a photo i took of my classmates">
-					</div>
-					
-					<div class = "column">
-						<img loading="lazy" src="./media/illustration/flower arch (winner)_compressed.webp" alt="">
-						<img loading="lazy" src="./media/illustration/one day it'll be too late_compressed.webp" alt="">
-						<img loading="lazy" src="./media/illustration/red crossed arm_compressed.webp" alt="self portrait probably">
-						<img loading="lazy" src="./media/illustration/peace sign_compressed.webp" alt="happy girl who was supposed to make a peace sign that i forgot about">
-						<img loading="lazy" src = "./media/illustration/plumerias transparent_compressed.webp" alt = "plumerias under blue ambience based on a korean zombie movie">
-						<img loading="lazy" src="./media/illustration/tessl_compressed.webp" alt="tess/idalia wearing a beanie">
-					</div>
-				</section>
+
+<head>
+	<title>Illustration | NMN</title>
+	<meta charset="UTF=8">
+	<meta name="viewport" content="width = device - width, initial-scale = 1">
+	<meta name="robots" content="noindex, noml, nofollow">
+	<meta name="description" content="A lovely little site to show some bits and pieces of myself.">
+	<link rel="icon" type="image/x-icon" href="./media/illustration/golden panda sign_compressed.webp">
+	<link rel="stylesheet" href="./stylesheet/style.css">
+	<link rel="stylesheet" href="./stylesheet/css reset.css">
+	<link rel="stylesheet" href="./stylesheet/responsiveimagegrid.css">
+</head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RZE6HY0YEG"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag() { dataLayer.push(arguments); }
+	gtag('js', new Date());
+
+	gtag('config', 'G-RZE6HY0YEG');
+</script>
+
+<body>
+	<div class="page-wrapper">
+		<div class="main-container">
+			<!--Horizontal List Menu-->
+			<div class="nav-container">
+				<nav>
+					<ul>
+						<li><a href="./index.html">Home</a></li>
+						<li><a class="active" href="./illustration.html">Illustration</a></li>
+						<li><a href="./animation.html">Animation</a></li>
+					</ul>
+				</nav>
 			</div>
 
-			<!--Footer-->
-			<footer>
-				Copyright &copy RUMIRTA.ME
-			</footer>
+			<section class="row">
+				<div class="column">
+					<img loading="lazy" src="./media/illustration/lady in green staring at you_compressed.webp"
+						alt="a lady i have future ideas for">
+					<img loading="lazy" src="./media/illustration/5.0 shin chan_compressed.webp"
+						alt="shin chan in an aquarium">
+					<img loading="lazy" src="./media/illustration/irasuto kon_compressed.webp"
+						alt="a submission i made for a competition">
+					<img loading="lazy" src="./media/illustration/dean sitting_compressed.webp"
+						alt="dean sitting down, embarrassed about being captured on camera">
+					<img loading="lazy" src="./media/illustration/mwf transparent_compressed.webp"
+						alt="mwf leaning over a railing">
+					<img loading="lazy" src="./media/illustration/d_compressed_1.webp" alt="death in reddish-pink">
+					<img loading="lazy" src="./media/illustration/classmates_compressed.webp"
+						alt="sketch based on a photo i took of my classmates">
+				</div>
+
+				<div class="column">
+					<img loading="lazy" src="./media/illustration/flower arch (winner)_compressed.webp" alt="">
+					<img loading="lazy" src="./media/illustration/one day it'll be too late_compressed.webp" alt="">
+					<img loading="lazy" src="./media/illustration/red crossed arm_compressed.webp"
+						alt="self portrait probably">
+					<img loading="lazy" src="./media/illustration/peace sign_compressed.webp"
+						alt="happy girl who was supposed to make a peace sign that i forgot about">
+					<img loading="lazy" src="./media/illustration/plumerias transparent_compressed.webp"
+						alt="plumerias under blue ambience based on a korean zombie movie">
+					<img loading="lazy" src="./media/illustration/tessl_compressed.webp"
+						alt="tess/idalia wearing a beanie">
+				</div>
+			</section>
 		</div>
-	</body>
+
+		<!--Footer-->
+		<footer>
+			Copyright &copy RUMIRTA.ME
+		</footer>
+	</div>
+</body>
+
 </html>
