--- a/animation.html
+++ b/animation.html
@@ -1,48 +1,63 @@
 <!DOCTYPE html>
 
 <html>
-	<head>
-		<title>Animation | NMN</title>
-		<meta charset = "UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="robots" content="noindex, noml, nofollow">
-		<meta name="description" content="A lovely little site to show some bits and pieces of myself.">
-		<link rel="icon" type = "image/x-icon" href="./media/illustration/golden panda sign_compressed.webp">
-		<link rel = "stylesheet" href = "./stylesheet/style.css">
-		<link rel = "stylesheet" href = "./stylesheet/css reset.css">
-		<link rel = "stylesheet" href = "./stylesheet/responsiveimagegrid.css">
-	</head>
-	
-	<body>
-		<div class="page-wrapper">
-			<div class = "main-container">
-				<!--Horizontal List Menu-->
-				<div class = "nav-container">
-					<nav>
-						<ul>
-							<li><a href = "./index.html">Home</a></li>
-							<li><a href = "./illustration.html">Illustration</a></li>
-							<li><a class = "active" href = "./animation.html">Animation</a></li>
-						</ul>
-					</nav>
-				</div>
-				
-				<section class = "row">
-					<div class = "column">
-						<img loading="lazy" src = "./media/animation/field_compressed.gif" alt = "fanart of sasha from attack on titan">
-						<img loading="lazy" src = "./media/animation/the unknown - jfarrari_compressed.gif" alt = "a woman going made due to the unknown">
-					</div>
-					
-					<div class = "column">
-						<img loading="lazy" src = "./media/animation/peekaboo - kendrick lamar_compressed.gif" alt = "THE LADY peeking at you from behind a tree">
-					</div>
-				</section>
+
+<head>
+	<title>Animation | NMN</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="robots" content="noindex, noml, nofollow">
+	<meta name="description" content="A lovely little site to show some bits and pieces of myself.">
+	<link rel="icon" type="image/x-icon" href="./media/illustration/golden panda sign_compressed.webp">
+	<link rel="stylesheet" href="./stylesheet/style.css">
+	<link rel="stylesheet" href="./stylesheet/css reset.css">
+	<link rel="stylesheet" href="./stylesheet/responsiveimagegrid.css">
+</head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RZE6HY0YEG"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag() { dataLayer.push(arguments); }
+	gtag('js', new Date());
+
+	gtag('config', 'G-RZE6HY0YEG');
+</script>
+
+<body>
+	<div class="page-wrapper">
+		<div class="main-container">
+			<!--Horizontal List Menu-->
+			<div class="nav-container">
+				<nav>
+					<ul>
+						<li><a href="./index.html">Home</a></li>
+						<li><a href="./illustration.html">Illustration</a></li>
+						<li><a class="active" href="./animation.html">Animation</a></li>
+					</ul>
+				</nav>
 			</div>
 
-			<!--Footer-->
-			<footer>
-				Copyright &copy RUMIRTA.ME
-			</footer>
+			<section class="row">
+				<div class="column">
+					<img loading="lazy" src="./media/animation/field_compressed.gif"
+						alt="fanart of sasha from attack on titan">
+					<img loading="lazy" src="./media/animation/the unknown - jfarrari_compressed.gif"
+						alt="a woman going made due to the unknown">
+				</div>
+
+				<div class="column">
+					<img loading="lazy" src="./media/animation/peekaboo - kendrick lamar_compressed.gif"
+						alt="THE LADY peeking at you from behind a tree">
+				</div>
+			</section>
 		</div>
-	</body>
+
+		<!--Footer-->
+		<footer>
+			Copyright &copy RUMIRTA.ME
+		</footer>
+	</div>
+</body>
+
 </html>
