--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
 	<link rel="icon" type="image/x-icon" href="./media/illustration/golden panda sign_compressed.webp">
 	<link rel="stylesheet" href="./stylesheet/style.css">
 	<link rel="stylesheet" href="./stylesheet/css reset.css">
-
-	<style>
-
-	</style>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RZE6HY0YEG"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag() { dataLayer.push(arguments); }
+	gtag('js', new Date());
+
+	gtag('config', 'G-RZE6HY0YEG');
+</script>
 
 <body>
 	<div class="page-wrapper">
@@ -39,7 +45,8 @@
 			<!--Side Profile Picture & Short Bio; fixed position-->
 			<div class="below-nav">
 				<section class="side-profile">
-					<img loading="lazy" src="./media/illustration/Illustration N - PFP 2 (green)_compressed.webp" alt="">
+					<img loading="lazy" src="./media/illustration/Illustration N - PFP 2 (green)_compressed.webp"
+						alt="">
 
 					<p>
 						<span class="fade">RUMIRTA.ME</span><br><br>
