Added a video.html page. Added video.html link to the menu in animation.html, illustration.html and index.html. Extra note: Videos aren't in column divs, row div is made into column.

--- a/illustration.html
+++ b/illustration.html
@@ -34,6 +34,7 @@
 						<li><a href="./index.html">Home</a></li>
 						<li><a class="active" href="./illustration.html">Illustration</a></li>
 						<li><a href="./animation.html">Animation</a></li>
+						<li><a href="./video.html">Video</a></li>
 					</ul>
 				</nav>
 			</div>
