--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 						<li><a class="active" href="./index.html">Home</a></li>
 						<li><a href="./illustration.html">Illustration</a></li>
 						<li><a href="./animation.html">Animation</a></li>
+						<li><a href="./video.html">Video</a></li>
 					</ul>
 				</nav>
 			</div>
